fix headline font and spacing (css)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,12 +36,14 @@ p {
 
 h2 {
     color: #fdfefd;
-    font-family: MuseoSansRounded-700;
+    font-family: MuseoSansRounded-500;
+    font-size: 30px;
 }
 
 h3 {
     color: #fdfefd;
-    font-family: MuseoSansRounded-700;
+    font-family: MuseoSansRounded-500;
+    font-size: 24px;
 }
 
 h4 {
@@ -102,19 +104,19 @@ button:hover {
     margin-bottom: 0;
 }
 
-.three-header{
+.three-header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-.icon{
+.icon {
     display: flex;
     flex-direction: column;
     margin: auto 1em;
 }
 
-.icon p{
+.icon p {
     text-align: center;
 }
 
@@ -123,25 +125,36 @@ button:hover {
     align-self: center;
 }
 
-.icon img{
+.icon img {
     display: flex;
     align-self: center;
 }
 
-.center{
+.center {
     display: flex;
     justify-content: center;
     text-align: center;
 }
 
-.center1{
+.center1 {
     display: flex;
     align-items: center;
     flex-direction: column;
 }
 
+.center2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.headline{
+    height: 4.2em;
+}
+
 .logo-container {
     width: 100%;
+
 }
 
 .logo {
@@ -154,18 +167,9 @@ button:hover {
     height: 2.6em;
 }
 
-.demo{
-    width: 100%;
-}
-
-.demoi{
-    width:100%;
-    height:70%;
-}
-
 .headline-container {
     width: 100%;
-    margin-top: 1em;
+    margin-top: 0.5em;
 }
 
 .headline-container h2 {
@@ -181,7 +185,7 @@ button:hover {
     margin: 0 auto;
 }
 
-.three-header div{
+.three-header div {
     display: flex;
     flex: 1 1 33.3333%;
 }
